# alyosha-ai

ai-agents/ai-b2b-architect/: main.py  pyproject.toml
ai-agents/ai-b2b-architect/src/: briefing_agent.py  dependencies.py
apps/: aes.py  pyproject.toml  result.txt
apps/api/: container.py  dependencies.py
apps/api/v1/routers/: __init__.py  llms_catalog.py  models_registry.py
apps/config/: dev.py
apps/migrations/: env.py
apps/migrations/versions/: 2025_12_16_1641-98b28a73896d_remove_unused_field.py  2025_12_19_1537-3deddf65580e_create_registry_tables.py  2025_12_19_1605-c9e62d6d03cf_refactor_registry_models.py
apps/modules/assistant/domain/: commands.py  entities.py  value_objects.py
apps/modules/catalogs/domain/: entities.py  specifications.py  value_objects.py
apps/modules/chat/domain/: value_objects.py
apps/modules/iam/domain/: entities.py  exceptions.py  value_objects.py
apps/modules/iam/utils/: security.py
apps/modules/llm_catalog/application/: __init__.py  dto.py  queries.py  repository.py  usecases.py
apps/modules/llm_catalog/domain/: __init__.py  entities.py  entities_new.py  primitives.py  value_objects.py
apps/modules/models_registry/application/: __init__.py  repository.py  usecases.py
apps/modules/models_registry/domain/: __init__.py  commands.py  entities.py  primitives.py  value_objects.py
prototypes/ai-marketer/: README.md  docker-compose.yml  main.py  pyproject.toml
prototypes/ai-marketer/src/seo/layout/: structure.py
prototypes/corp-assistant/: .env.example  add_docs.py  audio_mime_to_ext.json  docker-compose.yml  main.py  pyproject.toml  test.py
prototypes/corp-assistant/migrations/: env.py
prototypes/corp-assistant/prompts/: minutes_of_meeting_prompt.md  summary_prompt.md  system_prompt.md
prototypes/corp-assistant/src/: ai_agent.py  api.py  bot.py  broker.py  keyboards.py  rag.py  settings.py  storage.py  utils.py
services/knowledge-graph/: example.py  main.py  pyproject.toml  test.py
services/knowledge-graph/src/: settings.py
(+55 files in other folders)
